--- a/css/new-collection.css
+++ b/css/new-collection.css
@@ -10,16 +10,16 @@
   line-height: 113%;
   font-weight: 400;
   font-size: 25px;
-  margin-bottom: 30px;
-  color: var(--black);
   font-family: "Montserrat", sans-serif;
+  display: unset;
 }
 
 .collection__products {
   display: flex;
   justify-content: space-around;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 30px;
+  margin-top: 30px;
 }
 
 .collection__products-big {
@@ -74,13 +74,15 @@
 }
 
 .product-card__like:hover .product-card__like-icon,
-.product-card__like:active .product-card__like-icon {
-  color: black;
+.product-card__like:active .product-card__like-icon,
+.product-card__name,
+.product-card__price,
+.collection__title {
+  color: var(--black);
 }
 
 .product-card__name,
 .product-card__price {
-  color: var(--black);
   font-family: "Montserrat", sans-serif;
 }
 
@@ -88,11 +90,60 @@
   margin-top: 20px;
   margin-bottom: 8px;
 }
-.product-card__name:hover,
-.product-card__name:active,
-.product-card__price:hover,
-.product-card__price:active {
-  text-decoration: underline;
-  text-decoration-color: blue;
-  transition: text-decoration-color 0.3s ease;
+.mobile-collection__title {
+  display: none;
+}
+.all-collection {
+  display: none;
+}
+@media (max-width: 768px) {
+  .collection {
+    padding: 20px;
+  }
+}
+@media (max-width: 430px) {
+  .collection {
+    padding: 10px;
+  }
+  .collection__title {
+    font-size: 18px;
+    margin: 50px 84px 15px 30px;
+  }
+
+  .all-collection {
+    display: unset;
+    padding: 41px;
+  }
+
+  .collection__products {
+    overflow: auto;
+    margin-top: 15px;
+  }
+
+  .product-card {
+    height: 336px;
+    width: 222px;
+  }
+
+  .collection__products-big {
+    display: none;
+  }
+
+  .arrow {
+    color: var(--black);
+  }
+
+  .product-card__image {
+    height: 290px;
+    width: 222px;
+  }
+
+  .product-card__name,
+  .product-card__price {
+    font-size: 11px;
+  }
+
+  .product-card__name {
+    margin: 15px 0 5px 0px;
+  }
 }
