--- a/css/new-collection.css
+++ b/css/new-collection.css
@@ -1,8 +1,9 @@
-.collection {
+.container {
   width: 1170px;
   margin: 100px auto;
   max-width: 100%;
   box-sizing: border-box;
+  padding: 0 10px;
 }
 
 .collection__title {
@@ -10,7 +11,7 @@
   line-height: 113%;
   font-weight: 400;
   font-size: 25px;
-  display: unset;
+  margin-bottom: 30px;
 }
 
 .collection__products {
@@ -18,7 +19,6 @@
   justify-content: space-around;
   flex-wrap: nowrap;
   gap: 30px;
-  margin-top: 30px;
 }
 
 .collection__products-big {
@@ -30,7 +30,8 @@
 }
 
 .product-card {
-  width: 270px;
+  max-width: 270px;
+
   height: 416px;
   position: relative;
   margin-bottom: 30px;
@@ -38,7 +39,7 @@
 
 .product-card--big {
   height: 712px;
-  width: 570px;
+  max-width: 570px;
 }
 
 .product-card__image-wrapper {
@@ -46,15 +47,17 @@
 }
 
 .product-card__image {
-  width: 270px;
+  width: 100%;
   height: 353px;
   margin-bottom: 20px;
   display: block;
+  object-fit: cover;
 }
 
 .product-card__image--big {
-  width: 570px;
+  width: 100%;
   height: 649px;
+  object-fit: cover;
 }
 
 .product-card__like {
@@ -68,7 +71,7 @@
 }
 
 .product-card__like-icon {
-  color: white;
+  color: var(--white);
   transition: color 0.3s ease;
 }
 
@@ -86,7 +89,6 @@
 }
 
 .product-card__name {
-  margin-top: 20px;
   margin-bottom: 8px;
 }
 .mobile-title {
@@ -94,62 +96,61 @@
   justify-content: space-between;
   align-items: center;
 }
-.all-collection {
+.button-all-collection {
   display: none;
 }
-@media (max-width: 768px) {
-  .collection {
-    padding: 20px;
-  }
-}
-@media (max-width: 430px) {
-  .collection {
-    padding: 10px;
+
+@media (max-width: 970px) {
+  .container {
+    width: 570px;
   }
   .collection__title {
-    font-size: 18px;
+    margin-bottom: 15px;
   }
-
-  .all-collection {
+  .button-all-collection {
     display: unset;
-    color: var(--black);
+    margin-bottom: 15px;
   }
-
-  .collection__products {
-    overflow: auto;
-    margin-top: 15px;
+  .product-card:nth-child(even) {
+    display: none;
+  }
+  .product-card--big:nth-child(even) {
+    display: none;
+  }
+}
+@media (max-width: 570px) {
+  .container {
+    width: 474px;
   }
 
   .product-card {
-    height: 336px;
     width: 222px;
+    height: 336px;
   }
-
-  .collection__products-big {
+  .product-card--big {
     display: none;
   }
-
-  .arrow {
-    color: var(--black);
-    margin-left: 0px;
-  }
-
   .product-card__image {
-    height: 290px;
     width: 222px;
+    height: 290px;
+    margin-bottom: 15px;
   }
-
+}
+@media (max-width: 430px) {
+  .collection__title {
+    font-size: 18px;
+  }
+  .button-all-collection {
+    font-size: 12px;
+  }
   .product-card__name,
   .product-card__price {
     font-size: 11px;
   }
-
-  .product-card__name {
-    margin: 15px 0 5px 0px;
+  .product-card:nth-child(even) {
+    display: unset;
   }
-}
-@media (max-width: 380px) {
-  .collection__title {
-    font-size: 18px;
+  .collection__products {
+    overflow-x: auto;
   }
 }
