--- a/css/new-collection.css
+++ b/css/new-collection.css
@@ -1,167 +1,133 @@
-.container {
-  width: 1170px;
-  margin: 100px auto;
-  max-width: 100%;
-  box-sizing: border-box;
-  padding: 0 10px;
-}
-
-.collection__title {
-  letter-spacing: 3%;
-  line-height: 113%;
-  font-weight: 400;
+.new-collection-title {
   font-size: 25px;
-  margin-bottom: 30px;
-}
-
-.collection__products {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  gap: 30px;
-}
-
-.collection__products-big {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  margin-top: 30px;
-  gap: 30px;
-}
-
-.product-card {
-  max-width: 270px;
-
-  height: 416px;
-  position: relative;
-  margin-bottom: 30px;
-}
-
-.product-card--big {
-  height: 712px;
-  max-width: 570px;
-}
-
-.product-card__image-wrapper {
-  position: relative;
-}
-
-.product-card__image {
-  width: 100%;
-  height: 353px;
-  margin-bottom: 20px;
-  display: block;
-  object-fit: cover;
-}
-
-.product-card__image--big {
-  width: 100%;
-  height: 649px;
-  object-fit: cover;
-}
-
-.product-card__like {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-}
-
-.product-card__like-icon {
-  color: var(--white);
-  transition: color 0.3s ease;
-}
-
-.product-card__like:hover .product-card__like-icon,
-.product-card__like:active .product-card__like-icon,
-.product-card__name,
-.product-card__price,
-.collection__title {
-  color: var(--black);
-}
-
-.product-card__name,
-.product-card__price {
   font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  line-height: 114%;
+  letter-spacing: 3%;
+  color: var(--black);
+  margin-bottom: 30px;
 }
 
-.product-card__name {
+.new-collection__cards {
+  display: flex;
+  gap: 30px;
+}
+
+.new-collection__card {
+  display: flex;
+  flex-direction: column;
+  max-width: 270px;
+  position: relative;
+}
+
+.new-collection__photo {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.button-like {
+  width: 26px;
+  height: 26px;
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  color: var(--white);
+}
+.button-like:hover {
+  color: red;
+  transition: all 0.3s ease-in;
+}
+
+.new-collection__card-name {
+  font-size: 16px;
   margin-bottom: 8px;
 }
-.mobile-title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.new-collection__card-price {
+  margin-bottom: 60px;
 }
-.button-all-collection {
+
+.new-collection__cards-big {
+  display: flex;
+  gap: 30px;
+  flex: 0 1 auto;
+}
+
+.new-collection__card-big {
+  max-width: 570px;
+  position: relative;
+  flex-direction: column;
+}
+
+.new-collection__photo-big {
+  width: 100%;
+  margin-bottom: 20px;
+}
+.mobile-button {
   display: none;
 }
-
-@media (max-width: 970px) {
-  .container {
-    width: 570px;
+@media (max-width: 1200px) {
+  .new-collection__cards,
+  .new-collection__cards-big {
+    gap: 15px;
   }
-  .collection__title {
-    margin-bottom: 15px;
-  }
-  .button-all-collection {
-    display: unset;
-    margin-bottom: 15px;
-  }
-  .product-card:nth-child(even) {
-    display: none;
-  }
-  .product-card--big:nth-child(even) {
-    display: none;
-  }
-  .collection__products {
-    gap: 20px;
-  }
-}
-@media (max-width: 570px) {
-  .container {
-    width: 474px;
-  }
-
-  .product-card {
-    width: 222px;
-    height: 336px;
-  }
-
-  .product-card__image {
-    width: 222px;
-    height: 290px;
-    margin-bottom: 15px;
-  }
-  .product-card--big {
-    width: 464px;
-  }
-  .product-card__image--big {
-    width: 100%;
-    height: 100%;
-  }
-}
-@media (max-width: 430px) {
-  .collection__title {
-    font-size: 18px;
-  }
-  .button-all-collection {
+  .new-collection__card-price,
+  .new-collection__card-name {
     font-size: 12px;
   }
-  .product-card__name,
-  .product-card__price {
-    font-size: 11px;
+}
+
+@media (max-width: 871px) {
+  .new-collection__cards {
+    flex-wrap: wrap;
   }
-  .product-card:nth-child(even) {
-    display: unset;
+  .new-collection__photo {
+    width: 100%;
   }
-  .collection__products {
+
+  .new-collection__card-big:nth-child(even) {
+    display: none;
+  }
+  .new-collection-title {
+    font-size: 18px;
+  }
+  .new-collection__card {
+    width: 50%;
+  }
+  .new-collection__photo {
+    width: 100%;
+  }
+  .new-collection__card-big {
+    width: calc(100%-7px);
+  }
+}
+@media (max-width: 590px) {
+  .new-collection__cards {
+    flex-wrap: nowrap;
     overflow-x: auto;
+    gap: 15px;
   }
-  .product-card--big {
+  .new-collection-title {
+    margin-bottom: 15px;
+  }
+  .new-collection__card {
+    width: 222px;
+  }
+  .new-collection__photo {
+    width: 222px;
+    margin-bottom: 15px;
+  }
+  .new-collection__card-name {
+    margin-bottom: 5px;
+  }
+  .mobile-button {
+    display: unset;
+    color: var(--black);
+  }
+  .mobile-title {
+    display: flex;
+    justify-content: space-between;
+  }
+  .new-collection__cards-big {
     display: none;
   }
 }
