--- a/css/new-collection.css
+++ b/css/new-collection.css
@@ -11,12 +11,14 @@
 .new-collection__cards {
   display: flex;
   gap: 30px;
+  flex: 0 1 auto;
 }
 
 .new-collection__card {
   display: flex;
   flex-direction: column;
-  max-width: 270px;
+  max-width: calc(25% - 15px);
+  width: unset;
   position: relative;
 }
 
@@ -53,7 +55,8 @@
 }
 
 .new-collection__card-big {
-  max-width: 570px;
+  max-width: calc(50% - 15px);
+  width: unset;
   position: relative;
   flex-direction: column;
 }
@@ -84,20 +87,19 @@
     width: 100%;
   }
 
-  .new-collection__card-big:nth-child(even) {
-    display: none;
-  }
   .new-collection-title {
     font-size: 18px;
   }
   .new-collection__card {
-    width: 50%;
+    max-width: unset;
+    width: calc(50% - 7.5px);
   }
   .new-collection__photo {
     width: 100%;
   }
   .new-collection__card-big {
-    width: calc(100%-7px);
+    width: calc(50% - 7.5px);
+    max-width: unset;
   }
 }
 @media (max-width: 590px) {
@@ -105,6 +107,7 @@
     flex-wrap: nowrap;
     overflow-x: auto;
     gap: 15px;
+    /* justify-content: flex-start; */
   }
   .new-collection-title {
     margin-bottom: 15px;
