--- a/css/new-collection.css
+++ b/css/new-collection.css
@@ -3,23 +3,31 @@
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   line-height: 114%;
-  letter-spacing: 3%;
+  letter-spacing: 3px;
   color: var(--black);
+}
+.new-collection__title-block {
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 30px;
+}
+
+.new-collection {
+  padding: 60px 0;
 }
 
 .new-collection__cards {
   display: flex;
   gap: 30px;
-  flex: 0 1 auto;
 }
 
 .new-collection__card {
   display: flex;
   flex-direction: column;
   max-width: calc(25% - 15px);
-  width: unset;
+  width: 100%;
   position: relative;
+  margin-bottom: 60px;
 }
 
 .new-collection__photo {
@@ -34,6 +42,7 @@
   top: 12px;
   right: 12px;
   color: var(--white);
+  cursor: pointer;
 }
 .button-like:hover {
   color: red;
@@ -43,9 +52,6 @@
 .new-collection__card-name {
   font-size: 16px;
   margin-bottom: 8px;
-}
-.new-collection__card-price {
-  margin-bottom: 60px;
 }
 
 .new-collection__cards-big {
