--- a/css/index.css
+++ b/css/index.css
@@ -1,2 +1,4 @@
-@import url(reset.css);
-@import url(variables.css);
+@import url(./reset.css);
+@import url(./variables.css);
+@import url(./banner.css);
+@import url(./style.css);
