--- a/css/banner.css
+++ b/css/banner.css
@@ -2,7 +2,7 @@
   background-image: url(../img-banner/bg-banner.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100%;
+
   height: 100vh;
   overflow-x: hidden;
 }
@@ -46,12 +46,12 @@
 }
 .left {
   top: 330px;
-  left: -350px;
+  left: -100px;
 }
 
 .right {
   top: 330px;
-  right: -200px;
+  right: -70px;
   rotate: 180deg;
 }
 .about__text {
@@ -72,8 +72,9 @@
   font-family: Playfair Display;
 }
 .button-catalog {
-  width: 19vw;
+  max-width: 300px;
   background-color: var(--white-color);
+  padding: 19px 65px;
 
   height: 56px;
   display: flex;
@@ -96,6 +97,8 @@
   display: flex;
   justify-content: center;
   gap: 10px;
+
+  height: 30px;
 }
 
 .circle {
@@ -109,8 +112,8 @@
   border-radius: 50%;
   height: 13px;
   width: 13px;
-  color: var(--black-color);
-  background-color: var(--black-color);
+  color: var(--gray-color);
+  background-color: var(--gray-color);
 }
 .circle:hover {
   background-color: var(--gray-color);
@@ -125,4 +128,52 @@
   border-bottom: 1px solid var(--black-color);
   background-color: transparent;
   outline: none;
+}
+@media (max-width: 1200px) {
+  .header__tools {
+    width: 100%;
+    background-color: var(--white-color);
+    padding: 15px 30px;
+  }
+
+  .about-collection {
+    justify-content: center;
+  }
+
+  .nav__item,
+  .input,
+  .like {
+    display: none;
+  }
+  .burger__nav-button {
+    display: flex;
+    width: 19px;
+    height: 12.5px;
+    flex-direction: column;
+    gap: 4px;
+  }
+  .line {
+    height: 1.5px;
+    width: 19px;
+    border: 1px solid var(--black-color);
+  }
+}
+
+@media (max-width: 425px) {
+  .banner {
+    background-image: none;
+  }
+  .slider-swap {
+    height: unset;
+  }
+
+  .about-collection {
+    background-image: url(../img-banner/banner-mobile.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+}
+.button-catalog p {
+  font-size: 14px;
 }
