--- a/css/banner.css
+++ b/css/banner.css
@@ -162,17 +162,10 @@
 @media (max-width: 425px) {
   .banner {
     background-image: url(../img-banner/banner-mobile.jpg);
-    background-position: center;
+    background-position: 100% 100%;
   }
   .slider-swap {
     height: unset;
-  }
-
-  .about-collection {
-    /* background-image: url(../img-banner/banner-mobile.jpg); */
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
   }
 }
 .button-catalog p {
