--- a/css/autumn.css
+++ b/css/autumn.css
@@ -1,14 +1,19 @@
-.about {
+.autumn {
+  padding: 60px 10px;
+}
+
+.about__autumn {
   display: flex;
   justify-content: space-between;
   max-width: 822px;
   margin-bottom: 60px;
 }
 
-.title__collection {
+.title__collection-autumn {
   display: flex;
   font-size: clamp(18px, 2.83vw, 25px);
   font-family: "Montserrat", sans-serif;
+  text-align: center;
 }
 
 .title__collection,
@@ -17,7 +22,7 @@
   color: var(--black);
 }
 
-.about__collection {
+.about__collection-autumn {
   max-width: 370px;
 }
 .collection-text {
@@ -28,6 +33,7 @@
 .bottom-about {
   color: var(--gray);
   text-decoration: underline;
+  text-underline-offset: 3px;
 }
 .bottom-about:hover {
   transition: all 0.3s ease-out;
@@ -37,7 +43,9 @@
   justify-content: space-between;
   gap: 30px;
 }
-.left__photo-autumn-collection {
+
+.autumn__left-photo img,
+.autumn__right-photo img {
   width: 100%;
 }
 .autumn__left-photo {
@@ -46,18 +54,16 @@
 .autumn__right-photo {
   max-width: 470px;
 }
-.right__photo-autumn-collection {
-  width: 100%;
-}
-.for__mobile {
+
+.for__mobile-autumn {
   display: none;
 }
-@media (max-width: 775px) {
+@media (max-width: 590px) {
   .autumn__collection-pc {
     display: none;
   }
 
-  .for__mobile {
+  .for__mobile-autumn {
     display: block;
     padding: 10px;
   }
@@ -67,21 +73,21 @@
     margin-bottom: 15px;
   }
 
-  .mobile__photo {
+  .mobile__photo-autumn {
     display: flex;
     justify-content: center;
     margin-bottom: 25px;
   }
 
-  .img-mobile {
-    width: 320px;
+  .img-mobile-autumn {
+    max-width: 320px;
+    width: 100%;
   }
 
-  .about__collection {
+  .about__collection-mobile-autumn {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-
     width: 260px;
   }
 
