--- a/css/autumn.css
+++ b/css/autumn.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   max-width: 822px;
   margin-bottom: 60px;
+  gap: 30px;
 }
 
 .title__collection-autumn {
@@ -57,6 +58,12 @@
 
 .for__mobile-autumn {
   display: none;
+}
+
+@media (max-width: 1200px) {
+  .photo__collection {
+    gap: 15px;
+  }
 }
 @media (max-width: 590px) {
   .autumn__collection-pc {
