--- a/css/new-collection.css
+++ b/css/new-collection.css
@@ -86,6 +86,10 @@
 }
 
 @media (max-width: 871px) {
+  .new-collection {
+    padding: 30px 10px;
+  }
+
   .new-collection__cards {
     flex-wrap: wrap;
     margin-bottom: 15px;
