--- a/css/variables.css
+++ b/css/variables.css
@@ -1,5 +1,5 @@
 :root {
-  --gray-color: #6f6f6f;
-  --black-color: #2d2d2d;
-  --white-color: #ffffff;
+  --black: #2d2d2d;
+  --gray: #6f6f6f;
+  --white: #ffffff;
 }
