--- a/css/banner.css
+++ b/css/banner.css
@@ -20,7 +20,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 100%;
-  color: var(--black-color);
+  color: var(--black);
 }
 .header__button-icons {
   display: flex;
@@ -37,11 +37,11 @@
 .left,
 .right {
   position: absolute;
-  color: var(--white-color);
+  color: var(--white);
 }
 .left:hover,
 .right:hover {
-  color: var(--gray-color);
+  color: var(--gray);
   transition: all 0.2s ease;
 }
 .left {
@@ -58,7 +58,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  color: var(--white-color);
+  color: var(--white);
   max-width: 382px;
   text-align: center;
   align-items: center;
@@ -73,23 +73,22 @@
 }
 .button-catalog {
   max-width: 300px;
-  background-color: var(--white-color);
+  background-color: var(--white);
   padding: 19px 65px;
-
   height: 56px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .button-catalog p {
-  color: var(--black-color);
+  color: var(--black);
 }
 .svg-button {
-  color: var(--black-color);
+  color: var(--black);
 }
 .svg-button:hover,
 .nav__item:hover {
-  color: var(--gray-color);
+  color: var(--gray);
   transition: all 0.2s ease;
   cursor: pointer;
 }
@@ -97,7 +96,6 @@
   display: flex;
   justify-content: center;
   gap: 10px;
-
   height: 30px;
 }
 
@@ -105,18 +103,18 @@
   border-radius: 50%;
   height: 13px;
   width: 13px;
-  color: var(--black-color);
-  background-color: var(--white-color);
+  color: var(--black);
+  background-color: var(--white);
 }
 .circle-active {
   border-radius: 50%;
   height: 13px;
   width: 13px;
-  color: var(--gray-color);
-  background-color: var(--gray-color);
+  color: var(--gray);
+  background-color: var(--gray);
 }
 .circle:hover {
-  background-color: var(--gray-color);
+  background-color: var(--gray);
 }
 .input {
   background-image: url("data:image/svg+xml,%3Csvg width='11' height='11' viewBox='0 0 11 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.74 10.68C3.004 10.68 0.8 8.47605 0.8 5.74005C0.8 3.00405 3.004 0.800049 5.74 0.800049C8.476 0.800049 10.68 3.00405 10.68 5.74005C10.68 8.47605 8.476 10.68 5.74 10.68ZM5.74 1.56005C3.422 1.56005 1.56 3.42205 1.56 5.74005C1.56 8.05805 3.422 9.92005 5.74 9.92005C8.058 9.92005 9.92 8.05805 9.92 5.74005C9.92 3.42205 8.058 1.56005 5.74 1.56005Z' fill='%236F6F6F'/%3E%3C/svg%3E");
@@ -125,14 +123,14 @@
   background-size: 11px 11px;
   padding-left: 18px;
   border: none;
-  border-bottom: 1px solid var(--black-color);
+  border-bottom: 1px solid var(--black);
   background-color: transparent;
   outline: none;
 }
 @media (max-width: 1200px) {
   .header__tools {
     width: 100%;
-    background-color: var(--white-color);
+    background-color: var(--white);
     padding: 15px 30px;
   }
 
@@ -155,7 +153,7 @@
   .line {
     height: 1.5px;
     width: 19px;
-    border: 1px solid var(--black-color);
+    border: 1px solid var(--black);
   }
 }
 
@@ -172,8 +170,4 @@
 }
 .button-catalog p {
   font-size: 14px;
-}
-@media (max-width: 398px) {
-  .banner {
-  }
 }
