--- a/css/banner.css
+++ b/css/banner.css
@@ -1,179 +1,165 @@
 .banner {
   background-image: url(../img-banner/bg-banner.jpg);
-  background-size: cover;
   background-repeat: no-repeat;
-  overflow-x: hidden;
+  background-size: cover;
+  height: 954px;
 }
-.header__tools {
-  width: 100vw;
+
+.banner__nav {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  gap: 85px;
 }
-.nav__store {
+.banner__links {
   display: flex;
+  align-items: center;
   gap: 45px;
 }
-.nav__item {
+.banner__links a {
   font-family: Montserrat;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 100%;
-  color: var(--black);
 }
-.header__button-icons {
+.banner__input {
+  display: flex;
+  align-items: center;
+}
+.input {
+  background-color: transparent;
+  border-bottom: 1px solid var(--black);
+  outline: none;
+}
+.banner__tools {
   display: flex;
   align-items: center;
   gap: 20px;
 }
 
-.about-collection {
-  height: 700px;
-  display: flex;
-  justify-content: flex-end;
-  position: relative;
-}
-.left,
-.right {
-  position: absolute;
-  color: var(--white);
-}
-.left:hover,
-.right:hover {
+.like:hover,
+.bag:hover,
+.profile:hover,
+.banner__links a:hover {
   color: var(--gray);
-  transition: all 0.2s ease;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
 }
-.left {
-  top: 330px;
-  left: -100px;
-}
-
-.right {
-  top: 330px;
-  right: -70px;
-  rotate: 180deg;
-}
-.about__text {
+.banner__burger-button {
   display: flex;
   flex-direction: column;
+  gap: 4px;
+  align-items: center;
   justify-content: center;
-  color: var(--white);
-  max-width: 382px;
+}
+.burger__line {
+  height: 1px;
+  width: 19px;
+  border: 1px solid var(--black);
+}
+.banner__burger-button {
+  display: none;
+}
+.banner__content {
+  height: 750px;
+  align-items: center;
+}
+.banner__about {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  height: 100%;
+  justify-content: center;
+}
+.banner__title {
+  font-size: 25px;
+}
+
+.banner__romantic-text {
+  font-size: 63px;
+}
+.banner__romantic-text p {
   text-align: center;
+}
+.banner__text {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   align-items: center;
   gap: 25px;
 }
-.autumn-summer-title {
-  font-size: clamp(20px, 2.3vw, 25px);
-}
-.romantic-about {
-  font-size: clamp(43px, 5.38vw, 63px);
-  font-family: Playfair Display;
-}
-.button-catalog {
-  max-width: 300px;
-  background-color: var(--white);
-  padding: 19px 65px;
-  height: 56px;
+.banner__button-about {
   display: flex;
-  justify-content: center;
+  background-color: var(--white);
+  width: 300px;
+  height: 56px;
   align-items: center;
+  justify-content: center;
 }
-.button-catalog p {
+.banner__button-about p {
+  font-size: 16px;
   color: var(--black);
 }
-.svg-button {
-  color: var(--black);
-}
-.svg-button:hover,
-.nav__item:hover {
-  color: var(--gray);
-  transition: all 0.2s ease;
-  cursor: pointer;
-}
-.slider-swap {
+.slider {
   display: flex;
   justify-content: center;
   gap: 10px;
-  height: 30px;
 }
-
-.circle {
-  border-radius: 50%;
+.circle__slider {
+  display: flex;
   height: 13px;
   width: 13px;
-  color: var(--black);
+  border-radius: 50%;
   background-color: var(--white);
 }
-.circle-active {
-  border-radius: 50%;
-  height: 13px;
-  width: 13px;
-  color: var(--gray);
+.banner__button-about:hover {
+  background-color: var(--black);
+  transition: all 0.2s ease;
+}
+.banner__button-about:hover p {
+  color: var(--white);
+  transition: all 0.2s ease;
+}
+.circle__slider:hover {
   background-color: var(--gray);
-}
-.circle:hover {
-  background-color: var(--gray);
-}
-.input {
-  background-image: url("data:image/svg+xml,%3Csvg width='11' height='11' viewBox='0 0 11 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.74 10.68C3.004 10.68 0.8 8.47605 0.8 5.74005C0.8 3.00405 3.004 0.800049 5.74 0.800049C8.476 0.800049 10.68 3.00405 10.68 5.74005C10.68 8.47605 8.476 10.68 5.74 10.68ZM5.74 1.56005C3.422 1.56005 1.56 3.42205 1.56 5.74005C1.56 8.05805 3.422 9.92005 5.74 9.92005C8.058 9.92005 9.92 8.05805 9.92 5.74005C9.92 3.42205 8.058 1.56005 5.74 1.56005Z' fill='%236F6F6F'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-position: left center;
-  background-size: 11px 11px;
-  padding-left: 18px;
-  border: none;
-  border-bottom: 1px solid var(--black);
-  background-color: transparent;
-  outline: none;
-}
-
-.burger__nav-button:hover .line {
-  border-color: var(--gray);
 }
 @media (max-width: 1200px) {
-  .header__tools {
-    width: 100%;
+  .banner__burger-button {
+    display: flex;
+  }
+  .banner__links {
+    display: none;
+  }
+  .banner__input {
+    display: none;
+  }
+  .banner__about {
+    align-items: center;
+  }
+}
+@media (max-width: 520px) {
+  .banner {
+    background-image: url(../img-banner/banner-mobile.jpg);
+    background-position: 0 34px;
+  }
+
+  .banner__nav {
     background-color: var(--white);
-    padding: 15px 30px;
+    gap: unset;
   }
-
-  .about-collection {
-    justify-content: center;
-  }
-
-  .nav__item,
-  .input,
   .like {
     display: none;
   }
-  .burger__nav-button {
-    display: flex;
-    width: 19px;
-    height: 12.5px;
-    flex-direction: column;
-    gap: 4px;
-  }
-  .line {
-    height: 1.5px;
-    width: 19px;
-    border: 1px solid var(--black);
-  }
 }
-
 @media (max-width: 425px) {
   .banner {
-    width: 100%;
-    background-image: url(../img-banner/banner-mobile.jpg);
-    background-position: 100% 80px;
-    background-attachment: fixed;
+    background-position: -72px 34px;
   }
-  .slider-swap {
-    height: unset;
+  .banner__title h2 {
+    font-size: 20px;
   }
-  .about__text {
-    color: var(--black);
+  .banner__romantic-text p {
+    font-size: 43px;
   }
 }
-.button-catalog p {
-  font-size: 14px;
+@media (max-width: 320px) {
+  .banner {
+    background-position: -130px 30px;
+  }
 }
