--- a/css/banner.css
+++ b/css/banner.css
@@ -21,11 +21,16 @@
 .banner__input {
   display: flex;
   align-items: center;
+  position: relative;
 }
 .input {
   background-color: transparent;
   border-bottom: 1px solid var(--black);
   outline: none;
+  padding-left: 20px;
+}
+.input__icon {
+  position: absolute;
 }
 .banner__tools {
   display: flex;
@@ -59,6 +64,25 @@
 .banner__content {
   height: 750px;
   align-items: center;
+  position: relative;
+}
+.left__arrow-slide,
+.right__arrow-slide {
+  position: absolute;
+  color: var(--white);
+}
+.left__arrow-slide,
+.right__arrow-slide {
+  top: 50%;
+}
+.right__arrow-slide {
+  transform: rotate(180deg);
+  right: -5%;
+}
+.left__arrow-slide:hover,
+.right__arrow-slide:hover {
+  color: var(--gray);
+  transition: all 0.2s ease;
 }
 .banner__about {
   display: flex;
@@ -144,6 +168,13 @@
     gap: unset;
   }
   .like {
+    display: none;
+  }
+  .banner__text {
+    color: var(--white);
+  }
+  .left__arrow-slide,
+  .right__arrow-slide {
     display: none;
   }
 }
