--- a/css/banner.css
+++ b/css/banner.css
@@ -90,6 +90,7 @@
   align-items: flex-end;
   height: 100%;
   justify-content: center;
+  margin-bottom: -30px;
 }
 .banner__title {
   font-size: 25px;
@@ -124,6 +125,7 @@
   display: flex;
   justify-content: center;
   gap: 10px;
+  margin-top: 200px;
 }
 .circle__slider {
   display: flex;
@@ -156,11 +158,20 @@
   .banner__about {
     align-items: center;
   }
+  .left__arrow-slide,
+  .right__arrow-slide {
+    display: none;
+  }
 }
 @media (max-width: 520px) {
   .banner {
+    background-image: none;
+    height: 100vh;
+  }
+  .banner__content {
     background-image: url(../img-banner/banner-mobile.jpg);
-    background-position: 0 34px;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .banner__nav {
@@ -172,25 +183,18 @@
   }
   .banner__text {
     color: var(--white);
+    margin-bottom: 160px;
+    gap: 12px;
   }
-  .left__arrow-slide,
-  .right__arrow-slide {
-    display: none;
-  }
-}
-@media (max-width: 425px) {
-  .banner {
-    background-position: -72px 34px;
+
+  .circle__slider {
+    width: 10px;
+    height: 10px;
   }
   .banner__title h2 {
     font-size: 20px;
   }
   .banner__romantic-text p {
     font-size: 43px;
-  }
-}
-@media (max-width: 320px) {
-  .banner {
-    background-position: -130px 30px;
   }
 }
