--- a/css/banner.css
+++ b/css/banner.css
@@ -1,11 +1,15 @@
 .banner {
-  background-image: url(../img-banner/bg-banner.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  width: 100%;
   height: 954px;
+  background: url(../img-banner/bg-banner.jpg) 0 0 / cover no-repeat;
+  padding: 18px 0 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .banner__nav {
+  width: 100%;
   display: flex;
   justify-content: space-between;
 }
@@ -61,9 +65,9 @@
   display: none;
 }
 .banner__content {
-  height: 750px;
   align-items: center;
   position: relative;
+  width: 100%;
 }
 .left__arrow-slide,
 .right__arrow-slide {
@@ -76,7 +80,10 @@
 }
 .right__arrow-slide {
   transform: rotate(180deg);
-  right: -5%;
+  right: -3%;
+}
+.left__arrow-slide {
+  left: -3%;
 }
 .left__arrow-slide:hover,
 .right__arrow-slide:hover {
@@ -89,7 +96,6 @@
   align-items: flex-end;
   height: 100%;
   justify-content: center;
-  margin-bottom: -30px;
 }
 .banner__title {
   font-size: 25px;
@@ -103,7 +109,6 @@
 }
 .banner__text {
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
   gap: 25px;
@@ -144,7 +149,7 @@
 .circle__slider:hover {
   background-color: var(--gray);
 }
-@media (max-width: 1200px) {
+@media (max-width: 1230px) {
   .banner__burger-button {
     display: flex;
   }
@@ -157,22 +162,37 @@
   .banner__about {
     align-items: center;
   }
+  .left__arrow-slide {
+    left: 5%;
+  }
+  .right__arrow-slide {
+    right: 5%;
+  }
+}
+@media (max-width: 768px) {
   .left__arrow-slide,
   .right__arrow-slide {
     display: none;
   }
 }
-@media (max-width: 520px) {
+@media (max-width: 550px) {
   .banner {
     background-image: none;
     height: 100vh;
+    padding-top: 0;
+    background: url(../img-banner/banner-mobile.jpg) center 60px / cover
+      no-repeat;
   }
-  .banner__content {
-    background-image: url(../img-banner/banner-mobile.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
+  .banner__nav {
+    width: 100%;
   }
+  .banner__about {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    vertical-align: baseline;
+  }
+
   .banner__tools {
     gap: 10px;
   }
@@ -186,7 +206,6 @@
   }
   .banner__text {
     color: var(--white);
-    margin-bottom: 160px;
     gap: 12px;
   }
 
