--- a/css/podval.css
+++ b/css/podval.css
@@ -1,101 +1,97 @@
-.podval {
+.footer {
+  padding: 64px 105px;
+}
+
+.footer__container {
   display: flex;
   justify-content: space-between;
-  padding: 32px 112px;
+  margin-bottom: 80px;
 }
-.media {
-  width: 300px;
+.footer__title,
+.footer__links {
+  font-family: Montserrat;
 }
-.help,
-.company,
-.media {
+
+.footer__title {
+  color: var(--black);
+  font-weight: 500;
+  margin-bottom: 23px;
+  font-size: 18px;
+}
+.footer__links {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  font-size: 16px;
+  line-height: 180%;
 }
-.title__block {
-  margin-bottom: 15px;
-  font-size: 18px;
-  font-weight: 500;
+.footer__text {
+  text-align: center;
+  color: var(--gray);
+  font-size: 14px;
 }
-a:hover {
+.footer__links a:hover {
   color: var(--gray);
   transition: all 0.2s ease;
 }
-.podval__text {
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  color: var(--gray);
-  font-size: 14px;
-  line-height: 105%;
-  font-weight: 400;
-}
-.for__mobile-podval {
+.footer__mobile {
   display: none;
 }
-hr {
-  color: var(--gray);
-}
-@media (max-width: 1000px) {
-  .podval {
+@media (max-width: 950px) {
+  .footer__container,
+  .footer__text {
     display: none;
   }
-  .podval__text {
-    display: none;
+  .footer {
+    padding: 32px 50px;
   }
-  .for__mobile-podval {
+  .footer__mobile {
+    display: block;
+  }
+  .footer__container-mobile {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 40px 70px;
-  }
-  .for__mobile-podval h3 {
-    color: var(--black);
-    font-weight: 500;
-    margin-bottom: 15px;
-  }
-  .for__mobile-podval h3:hover {
-    color: var(--gray);
-    cursor: pointer;
-    transition: all 0.2s ease;
-  }
-  .arrow__podval-top {
-    color: var(--black);
-    transform: rotate(270deg);
-    margin-left: 8px;
-  }
-  .arrow__podval-bottom {
-    margin-left: 8px;
-    color: var(--black);
-    transform: rotate(90deg);
-  }
-  .Company__podval-mobile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 35px;
-  }
-  .help__podval-mobile {
     text-align: center;
-    margin-bottom: 35px;
-  }
-  .for__mobile-podval a:hover {
-    color: var(--gray);
-    transition: all 0.2s ease;
-  }
-  .media__podval-mobile {
-    display: flex;
-    justify-content: space-between;
     gap: 35px;
   }
-  .img__podval-logo {
-    text-align: center;
+  .footer__container-mobile h3 {
+    font-weight: 500;
+    font-size: 16px;
   }
-  .podval__text-mobile {
-    max-width: 350px;
-    text-align: center;
+  .footer__mobile-company {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .footer__mobile-media {
+    gap: 25px;
+  }
+  .footer__mobile-media,
+  .footer__mobile-img,
+  .footer__mobile-text {
+    justify-content: center;
+  }
+  .footer__mobile-media .footer__container-mobile,
+  .footer__mobile-company,
+  .footer__mobile-media,
+  .footer__mobile-img,
+  .footer__mobile-text {
+    display: flex;
+  }
+  .footer__mobile-company a,
+  .footer__mobile-media a {
+    font-size: 14px;
+  }
+  .footer__mobile-text {
     color: var(--gray);
+    font-size: 10px;
   }
+  .footer__mobile-arrow-bottom {
+    transform: rotate(90deg);
+  }
+  .footer__mobile-arrow-top {
+    transform: rotate(270deg);
+  }
+}
+.footer__container-mobile a:hover {
+  color: var(--gray);
+  transition: all 0.2s ease;
 }
